jenkins/jenkins-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: jenkins
    spec:
      serviceAccount: jenkins
      imagePullSecrets:
      - name: harborkey
      containers:
      - name: jenkins
        image: harbor.gdphdc.com/jenkins/jenkins:0.0.1  
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: home
      volumes:
        - name: home
          persistentVolumeClaim:
            claimName: jenkins
---
